--- a/web/root/css/styles.css
+++ b/web/root/css/styles.css
@@ -1,17 +1,114 @@
-tr:nth-child(even) td:nth-child(even) {
+/* global */
+#center {
+  margin: 0 auto;
+  width: 900px;
+}
+
+* {
+  font-family: verdana;
+}
+
+#header {
+  background: #8bf;
+  height: 60px;
+  padding: 0 20px;
+}
+
+#header #logo {
+  background: #fff;
+  float: left;
+  height: 100%;
+  width: 100px;
+}
+
+#footer {
+}
+
+/* login */
+#login {
+  float: right;
+  width: 360px;
+  height: 50px;
+  margin-top: 10px;
+}
+
+#login #loginEmail,
+#login #loginPassword {
+  float: left;
+  width: 150px;
+  height: 50px;
+}
+
+#login #loginEmail.failed input,
+#login #loginPassword.failed input {
+  border: 1px solid #f00;
+}
+
+#login label,
+#login label {
+  font-size: 11px;
+  display: block;
+  width: 150px;
+}
+
+#login input[type="text"],
+#login input[type="password"] {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: inset 1px 1px 4px #ddd;
+  display: block;
+  height: 20px;
+  margin: 2px 0;
+  padding: 1px 5px;
+  width: 120px;
+}
+
+#login input[type="text"]:focus,
+#login input[type="password"]:focus {
+  border: 1px solid #acf;
+}
+
+#login #loginButton {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 13px;
+  float: left;
+  width: 55px;
+}
+
+#login #loginButton:hover {
+  border: 1px solid #acf;
+}
+
+#login #loginButton.disabled:hover {
+  border: 1px solid #ccc;
+}
+
+#login input[type="submit"] {
+  background: #fff;
+  border: none;
+  border-radius: 4px;
+  height: 22px;
+  font-size: 11px;
+  padding-bottom: 1px;
+  width: 55px;
+}
+
+#login input[type="submit"][disabled="disabled"] {
+  background: #eee;
+  color: #aaa;
+}
+
+/* chess board */
+
+tr:nth-child(even) td:nth-child(even),
+tr:nth-child(odd) td:nth-child(even) {
   background: #fff;
 }
 
-tr:nth-child(even) td:nth-child(odd) {
-  background: #ddd;
-}
-
+tr:nth-child(even) td:nth-child(odd),
 tr:nth-child(odd) td:nth-child(even) {
   background: #ddd;
-}
-
-tr:nth-child(odd) td:nth-child(odd) {
-  background: #fff;
 }
 
 tr {
