--- a/web/root/css/styles.css
+++ b/web/root/css/styles.css
@@ -22,6 +22,13 @@
 }
 
 #footer {
+  background: #8bf;
+  height: 60px;
+  padding: 0 20px;
+}
+
+#page {
+  padding: 20px;
 }
 
 /* login */
@@ -102,8 +109,7 @@
   border: 1px solid #f00;
 }
 
-/* chess board */
-
+/* chess board
 tr:nth-child(even) td:nth-child(even),
 tr:nth-child(odd) td:nth-child(even) {
   background: #fff;
@@ -139,3 +145,4 @@ tr:nth-child(8) td {
 td:nth-child(8) {
   border-right: 1px solid #000;
 }
+*/
